Install jekyll admin gem

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,13 @@ plugins:
   - jekyll-feed
   - jekyll-admin
 
+jekyll_admin:
+  hidden_links:
+    - pages
+    - staticfiles
+    - datafiles
+    - configuration
+
 exclude:
   - Gemfile
   - Gemfile.lock
