--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: ePages developer blog
-url: https://devblog.epages.com
+url: https://developer.epages.com
 twitter_username: epagesdevs
 github_username: ePages-de
 youtube_username: UCI5hX9kgUGFnYpfxZYxlP0Q
