Change title to developer portal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ePages developer blog
+title: ePages developer portal
 url: https://developer.epages.com
 twitter_username: epagesdevs
 github_username: ePages-de
