Fix category names

--- a/_config.yml
+++ b/_config.yml
@@ -47,11 +47,11 @@ categories:
   api-experience: API Experience
   coding: Coding
   events: Events
-  language-and-localization: Language &amp; Localization
-  methods-and-tools: Methods &amp; Tools
+  language-and-localization: Language & Localization
+  methods-and-tools: Methods & Tools
   on-the-job: On the job
   tech-stories: Tech Stories
-  techcomm-and-socialmedia: TechComm &amp; Social Media
+  techcomm-and-socialmedia: TechComm & Social Media
 
 pagination:
   enabled: true
