Fix categories name on config file because it causes conflicts with jekyll site.categories variable

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ exclude:
 feed:
   path: /blog/feed.xml
 
-categories:
+category_list:
   api-experience: API Experience
   coding: Coding
   events: Events
