Add lines to meet us section

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,28 +1,28 @@
 - title: Inova Ilmenau
   description: We are exhibiting at this event.
   link: https://inova-ilmenau.de/inova/
-  location: 24.-25. Oct 2017, 10am - 4pm, TU Ilmenau, Ehrenbergstraße 29, 98693 Ilmenau
+  location: 24.-25. Oct 2017<br>10am - 4pm<br>TU Ilmenau<br>Ehrenbergstraße 29<br>98693 Ilmenau
 - title: tc world conference
   description: We are participating in this event.
   link: http://tagungen.tekom.de/h17/tekom-jahrestagung-2017/
-  location: 24.-26. Oct 2017, International Congress Center, Stuttgart
+  location: 24.-26. Oct 2017<br>International Congress Center<br>Stuttgart
 - title: Scrum Alliance Global Scrum Gathering
   description: We are participating in this event.
   link: https://www.scrumalliance.org/sgdub
-  location: 30.Oct - 1. Nov 2017, Dublin
+  location: 30.Oct - 1. Nov 2017<br>Dublin
 - title: beyond tellerrand
   description: We are participating in this event.
   link: https://beyondtellerrand.com/events/berlin-2017
-  location: 6.-8. Nov 2017, Berlin
+  location: 6.-8. Nov 2017<br>Berlin
 - title: DEVOXX
   description: We are participating in this event.
   link: https://devoxx.be/
-  location: 6.-10. Nov 2017, Antwerp, Belgium
+  location: 6.-10. Nov 2017<br>Antwerp, Belgium
 - title: WIK HTWK Leipzig
   description: We are exhibiting at this event.
   link: http://www.wikway.de/wik-leipzig-htwk
-  location: 29. Nov 2017, 10am - 4pm, HTKW Leipzig, Foyer NIEPER-Bau, Karl-Liebknecht-Straße 134, 04277 Leipzig
+  location: 29. Nov 2017<br>10am - 4pm<br>HTKW Leipzig - Foyer NIEPER-Bau<br>Karl-Liebknecht-Straße 134<br>04277 Leipzig
 - title: academix Thüringen
   description: We are exhibiting at this event.
   link: http://www.thaff-thueringen.de/academix-thueringen/
-  location: 2. Dez 2017, 10am - 6pm, Messe Erfurt, Gothaer Straße 34, 99084 Erfurt
+  location: 2. Dez 2017<br>10am - 6pm<br>Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
