--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,8 +1,7 @@
 blog:
   title: ePages devBlog
   description: >
-    Welcome to the ePages Developer Blog! We will give you insights into our
-    daily work, share tech stories and open positions with you and much more.
+    Welcome to the ePages Developer Blog! We will give you insights into our daily work, share tech stories and open positions with you and much more.
   keywords: ["ePages developer blog", "developer blog", "ePages dev blog", "blog"]
 devjobs:
   title: ePages is looking for experienced developers | Apply now
