--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -25,3 +25,59 @@
   date: 2. Dez 2017
   time: 10am - 6pm
   address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+
+- title: academix Thüringen
+  description: We are exhibiting at this event.
+  link: http://www.thaff-thueringen.de/academix-thueringen/
+  date: 2. Dez 2017
+  time: 10am - 6pm
+  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+
+- title: academix Thüringen
+  description: We are exhibiting at this event.
+  link: http://www.thaff-thueringen.de/academix-thueringen/
+  date: 2. Dez 2017
+  time: 10am - 6pm
+  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+
+- title: academix Thüringen
+  description: We are exhibiting at this event.
+  link: http://www.thaff-thueringen.de/academix-thueringen/
+  date: 2. Dez 2017
+  time: 10am - 6pm
+  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+
+- title: academix Thüringen
+  description: We are exhibiting at this event.
+  link: http://www.thaff-thueringen.de/academix-thueringen/
+  date: 2. Dez 2017
+  time: 10am - 6pm
+  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+
+- title: academix Thüringen
+  description: We are exhibiting at this event.
+  link: http://www.thaff-thueringen.de/academix-thueringen/
+  date: 2. Dez 2017
+  time: 10am - 6pm
+  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+
+- title: academix Thüringen
+  description: We are exhibiting at this event.
+  link: http://www.thaff-thueringen.de/academix-thueringen/
+  date: 2. Dez 2017
+  time: 10am - 6pm
+  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+
+- title: academix Thüringen
+  description: We are exhibiting at this event.
+  link: http://www.thaff-thueringen.de/academix-thueringen/
+  date: 2. Dez 2017
+  time: 10am - 6pm
+  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+
+- title: academix Thüringen
+  description: We are exhibiting at this event.
+  link: http://www.thaff-thueringen.de/academix-thueringen/
+  date: 2. Dez 2017
+  time: 10am - 6pm
+  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
