--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,10 @@ exclude:
   - Capfile
   - _pages/url-map
   - resources
+  - README.md
+  - run_tests.sh
+  - config/
+  - log/
 
 feed:
   path: /blog/feed.xml
