--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ category_list:
   on-the-job: On the job
   tech-stories: Tech Stories
   techcomm-and-socialmedia: TechComm & Social Media
+  design: Design
 
 pagination:
   enabled: true
