--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,83 +1,27 @@
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+- title: JeffConf Hamburg 2018
+  description: We are participating at this event.
+  link: https://hamburg.jeffconf.com/agenda
+  date: 16. Feb 2018
+  time:
+  address: Altonaer Museum<br>Museumstraße 23<br>22765 Hamburg
 
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+- title: Ruby Unconference
+  description: We are participating at this event.
+  link:
+  date: 5. - 6. May 2018
+  time:
+  address: Hamburg
 
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+- title: Scrum Alliance Gathering
+  description: We are participating at this event.
+  link:
+  date: 8. - 10. Oct 2018
+  time:
+  address: ExCeL London<br>Royal Victoria Dock, 1 Western Gateway<br>London E16 1XL, UK
 
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
-
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
-
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
-
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
-
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
-
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
-
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
-
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
-
-- title: academix Thüringen
-  description: We are exhibiting at this event.
-  link: http://www.thaff-thueringen.de/academix-thueringen/
-  date: 2. Dez 2017
-  time: 10am - 6pm
-  address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
+# - title: academix Thüringen
+#   description: We are exhibiting at this event.
+#   link: http://www.thaff-thueringen.de/academix-thueringen/
+#   date: 2. Dez 2017
+#   time: 10am - 6pm
+#   address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
