--- a/_data/events.yml
+++ b/_data/events.yml
@@ -7,7 +7,7 @@
   image: hackathon_2017_2.png
   video: https://www.youtube.com/watch?v=j-qMUo8_ChQ
 
-- title: R&D day 2016
+- title: R&amp;D day 2016
   image: rnd_2016_1.jpg
   video: https://www.youtube.com/watch?v=wNQ7B0rIB3g
 
