Add time to event

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -2,7 +2,7 @@
   description: We are hosting this event.
   link: https://www.meetup.com/de-DE/Elixir-Hamburg/events/246482239/
   date: 30. Jan 2018
-  time:
+  time: '18:30'
   address: ePages GmbH<br>Holstenwall 5<br>20355 Hamburg
 
 - title: Smashing Conference London 2018
