--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,10 +1,3 @@
-- title: hh.ex Meetup - January Edition
-  description: We are hosting this event.
-  link: https://www.meetup.com/de-DE/Elixir-Hamburg/events/246482239/
-  date: 30. Jan 2018
-  time: '18:30'
-  address: ePages GmbH<br>Holstenwall 5<br>20355 Hamburg
-
 - title: Smashing Conference London 2018
   description: We are participating in this event.
   link: https://smashingconf.com/
@@ -23,7 +16,14 @@
   description: We are hosting this event.
   link:
   date: 27. Feb 2018
-  time:
+  time: '18:30'
+  address: ePages GmbH<br>Holstenwall 5<br>20355 Hamburg
+
+- title: Kubernetes / Cloud Native Meetup
+  description: We are hosting this event.
+  link:
+  date: 08. Mar 2018
+  time: '18:00'
   address: ePages GmbH<br>Holstenwall 5<br>20355 Hamburg
 
 - title: Ruby Unconference
