Add UX & Design category

--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,7 @@ category_list:
   on-the-job: On the job
   tech-stories: Tech Stories
   techcomm-and-socialmedia: TechComm & Social Media
+  ux-and-design: UX & Design
 
 pagination:
   enabled: true
