--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -10,7 +10,7 @@
   link: http://rubyunconf.eu/
   date: 5. - 6. May 2018
   time:
-  address: Hamburg
+  address: HAW Hamburg<br>Finkenau 35<br>22081 Hamburg
 
 - title: Karrieremesse Hochschule Schmalkalden
   description: We are participating in this event.
@@ -46,6 +46,13 @@
   date: 6. Jun 2018
   time:
   address: Friedrich-Schiller-Universität Jena<br>Fürstengraben 1<br>07743 Jena
+
+- title: JBCN Conference
+  description: We are participating in this event.
+  link: https://www.jbcnconf.com/2018/
+  date: 11. - 13. Jun 2018
+  time:
+  address: Centro Comercial Heron City<br>Cines Cinesa<br>Passeig d'Andreu Nin, s/n<br>08016 Barcelona
 
 - title: Scrum Alliance Gathering
   description: We are participating in this event.
