--- a/_data/events.yml
+++ b/_data/events.yml
@@ -2,6 +2,10 @@
   image: meet-the-team.png
   video: https://www.youtube.com/watch?v=FbE2FyqTJCY
 
+- title: Hackathon 2018
+  image: hackathon_2018.png
+  video: https://www.youtube.com/watch?v=j-bj3nC7qss
+
 - title: Hackathon 2017
   image: hackathon_2017_2.png
   video: https://www.youtube.com/watch?v=j-qMUo8_ChQ
