--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -5,6 +5,13 @@
   time:
   address: Centro Comercial Heron City<br>Cines Cinesa<br>Passeig d'Andreu Nin, s/n<br>08016 Barcelona
 
+- title: SoCraTes
+  description: We are participating in this event.
+  link: https://www.socrates-conference.de/home
+  date: 23. - 26. Aug 2018
+  time:
+  address: Hotel Park Soltau<br>Winsener Straße 111<br>29614 Soltau
+
 - title: Scrum Alliance Gathering
   description: We are participating in this event.
   link: https://events.scrumalliance.org/london-2018
