Add full name to authors file

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,5 @@
 - id: uabrisketa
   name: Unai A.
+  full_name: Unai Abrisketa
   description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   image: male_avatar.jpg
