--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -22,6 +22,18 @@
   description: is CTO at ePages, and shares the “bike2work” passion of many ePagees. He’s an ecommerce-addict, internet enthusiast, and Ruby/Docker evangelist.
   image: hbehrens.jpg
 
+- id: mduesterhoeft
+  name: Mathias
+  full_name: Mathias Düsterhöft
+  description: is a passionate software engineer with focus on Java and Kotlin, and a lot of experience in the Spring ecosystem. He loves open source and is the maintainer of restdocs-raml.
+  image: mduesterhoeft.jpg
+
+- id: ovynogradov
+  name: Oleksandr
+  full_name: Oleksandr Vynogradov
+  description: is a software engineer, Kotlin enthusiast, and passionate about automation.
+  image: ovynogradov.jpg
+
 - id: xalvarez
   name: Xavi
   full_name: Xavier Alvarez
