Add about the author section

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,9 @@
+- id: aortmann
+  name: Anja
+  full_name: Anja Ortmann
+  description: is a UX expert with strong focus on great usability for our customers. She loves creating UX concepts, and intuitive user guidance.
+  image: aortmann.jpg
+
 - id: asandau
   name: Alexander
   full_name: Alexander Sandau
