--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,27 @@
+- id: aamendariz
+  name: Alejandra
+  full_name: Alejandra
+  description: belongs to the epagesdevs content team.
+  image: avatar_female.jpg
+  
+- id: abaericke
+  name: Anja B.
+  full_name: Anja B.
+  description: belongs to the epagesdevs content team.
+  image: avatar_female.jpg
+
+- id: agarcia
+  name: Ángel
+  full_name: Ángel
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: agrohmann
+  name: Andreas
+  full_name: Andreas
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
 - id: aortmann
   name: Anja
   full_name: Anja Ortmann
@@ -16,11 +40,71 @@
   description: is a Technical Communicator. Her heart beats for UI writing, localization, and API documentation.
   image: bbader.jpg
 
+- id: bklein
+  name: Bastian
+  full_name: Bastian
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: bnothdurft
+  name: Benjamin
+  full_name: Benjamin
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: cbreitkreuz
+  name: Christian B.
+  full_name: Christian B.
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: choffmeister
+  name: Christian H.
+  full_name: Christian H.
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: cmueller
+  name: Christoph
+  full_name: Christoph
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: dcividanes
+  name: Domingo
+  full_name: Domingo
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: dmoran
+  name: Declan
+  full_name: Declan
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: dpauli
+  name: David
+  full_name: David
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
 - id: emueller
   name: Erik
   full_name: Erik Müller
   description: is a JavaScript Engineer, Node.js lover, and Elixir alchemist.
   image: emueller.jpg
+
+- id: fziller
+  name: Florian
+  full_name: Florian
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: jviladoms
+  name: Jordi
+  full_name: Jordi
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
 
 - id: hbehrens
   name: Harm
@@ -28,17 +112,125 @@
   description: is CTO at ePages, and shares the “bike2work” passion of many ePagees. He’s an ecommerce-addict, internet enthusiast, and Ruby/Docker evangelist.
   image: hbehrens.jpg
 
+- id: imolera
+  name: Ivan
+  full_name: Ivan
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: jblankenburg
+  name: Julia
+  full_name: Julia
+  description: belongs to the epagesdevs content team.
+  image: avatar_female.jpg
+
+- id: kabendroth
+  name: Kay
+  full_name: Kay
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: lbrandt
+  name: Lena
+  full_name: Lena
+  description: belongs to the epagesdevs content team.
+  image: avatar_female.jpg
+
+- id: mandresen
+  name: Mats
+  full_name: Mats
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
 - id: mduesterhoeft
   name: Mathias
   full_name: Mathias Düsterhöft
   description: is a passionate software engineer with focus on Java and Kotlin, and a lot of experience in the Spring ecosystem. He loves open source and is the maintainer of restdocs-raml.
   image: mduesterhoeft.jpg
 
+ id: mkohl
+  name: Martin
+  full_name: Martin
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: nfranke
+  name: Norman
+  full_name: Norman
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: nstender
+  name: Nicole
+  full_name: Nicole
+  description: belongs to the epagesdevs content team.
+  image: avatar_female.jpg
+
+- id: otrosien
+  name: Oliver T.
+  full_name: Oliver T.
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
 - id: ovynogradov
   name: Oleksandr
   full_name: Oleksandr Vynogradov
   description: is a software engineer, Kotlin enthusiast, and passionate about automation.
   image: ovynogradov.jpg
+
+- id: fvollert
+  name: Frederik
+  full_name: Frederik
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: rdomenech
+  name: Roger
+  full_name: Roger
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: rritter
+  name: Rose
+  full_name: Rose
+  description: belongs to the epagesdevs content team.
+  image: avatar_female.jpg
+
+- id: rteixeira
+  name: Renato
+  full_name: Renato
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: shippo
+  name: Shippo
+  full_name: Shippo
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: skoenig
+  name: Silvio
+  full_name: Silvio
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: ubiallas
+  name: Ulf
+  full_name: Ulf
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: umartinez
+  name: Unai M.
+  full_name: Unai M.
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: vmytysk
+  name: Vlad
+  full_name: Vlad
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
 
 - id: xalvarez
   name: Xavi
