--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
   full_name: Alejandra
   description: belongs to the epagesdevs content team.
   image: avatar_female.jpg
-  
+
 - id: abaericke
   name: Anja B.
   full_name: Anja B.
@@ -148,9 +148,15 @@
   description: is a passionate software engineer with focus on Java and Kotlin, and a lot of experience in the Spring ecosystem. He loves open source and is the maintainer of restdocs-raml.
   image: mduesterhoeft.jpg
 
- id: mkohl
+- id: mkohl
   name: Martin
   full_name: Martin
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: mriess
+  name: Mario
+  full_name: Mario
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
