--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -55,7 +55,7 @@
 - id: ozscheyge
   name: Oliver Z.
   full_name: Oliver Zscheyge
-  description: is a Software Engineer and wizard programmer. He practices katas not just in coding dojos.
+  description: is a Software Engineer. He practices katas not just in coding dojos.
   image: avatar_male.jpg
 
 - id: ppriotto
