Add localization tool post (#296)
* Add first draft
* Change front matter
* Add minor changes
* Fix internal link
* Review changes
* Adapt About the author section
* Review changes II
* Renaming
* Add new "About the author" section
* Add "About the author section" to older posts
* Resolve conflicts

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -64,6 +64,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: cgebken
+  name: Christina
+  full_name: Christina Gebken
+  description: is a Localization Manager and TechWriter. She loves working agile, and writing new help articles for our software.
+  image: cgebken.png
+
 - id: choffmeister
   name: Christian H.
   full_name: Christian H.
